--- a/WebShop/Pages/Shared/_Layout.cshtml
+++ b/WebShop/Pages/Shared/_Layout.cshtml
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body style="background-color:peru">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">WebShop</a>
+                <a class="navbar-brand text-light" asp-area="" asp-page="/Index">WebShop</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,21 +20,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Shop/Main">Main</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Shop/Main">Main</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
-
-                        <li class="dropdown order-1">
-                            <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
+                        <li class="nav-item">
+                        <a class="nav-link text-light" href="/Account/Register" id="registerLink">Register</a></li>
+                         <li class="dropdown order-1">
+                            <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-dark dropdown-toggle">Login <span class="caret"></span></button>
                             <ul class="dropdown-menu dropdown-menu-right mt-1">
-                                <li class="p-3">
+                                <li class="p-3 text-light">
                                     <form class="form" role="form" method="post" asp-page="/Shop/Login">
                                         <div class="form-group">
                                             <input id="emailInput" placeholder="Email" name="Email" class="form-control form-control-sm" type="text" required="">
@@ -58,16 +59,20 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        @*<main role="main" class="pb-3">*@
+        @RenderBody()
+        @*</main>*@
+        <hr />
+        <footer class="page-footer font-small bg-dark pt-4">
+            <div class="footer-copyright text-center py-3 text-light">
+                © 2020 Copyright:
+                &copy; 2021 - WebShop - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            </div>
+            
+        </footer>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - WebShop - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
-    </footer>
+    
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
