--- a/WebShop/Pages/Shop/ProductView.cshtml
+++ b/WebShop/Pages/Shop/ProductView.cshtml
@@ -8,12 +8,12 @@
 <div class="card mb-auto" >
     <div class="row no-gutters">
         <div class="col-md-4">
-            <img src="@Model.product.ProductImgUrl" class="card-img" alt="...">
+            <img src="@Model.product.ProductImgUrl" class="img-thumbnail mx-auto d-block" style="width:250px">
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="card-body">
                 <h5 class="card-title">@Model.product.ProductName</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">@Model.product.ProductDescription</p>
                 <p class="card-text">$@Model.product.ProductPrice</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 <a asp-page="Cart" asp-page-handler="add" asp-route-ID="@Model.product.ProductId" class="btn btn-secondary">Add To List</a>
