--- a/WebShop/Pages/Shop/Receipt.cshtml
+++ b/WebShop/Pages/Shop/Receipt.cshtml
@@ -9,7 +9,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Simple invoice in ASP.NET</title>
+    <title>Receipt</title>
     <style type="text/css" media="screen">
         body {
             background-color: #ccc;
